<resources>
    <string name="app_name">jokenpo</string>
    <string name="opcoes">Escolha opção</string>
    <string name="ultimaJogada">Última Jogada</string>
    <string name="jogadaJogador">Você</string>
    <string name="resultado">Resultado</string>
    <string name="jogadaPC">Android</string>
    <string name="venceu">Você Venceu</string>
    <string name="perdeu">Você Perdeu</string>
    <string name="empatou">Você Empatou</string>
</resources>
