<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="vitorcesarrio.jokenpo.MainActivity">

    <TextView
        android:id="@+id/tvOpcao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/opcoes"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgPedra"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:srcCompat="@drawable/pedra" />

        <ImageView
            android:id="@+id/imgPapel"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:srcCompat="@drawable/papel" />

        <ImageView
            android:id="@+id/imgTesoura"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:srcCompat="@drawable/tesoura" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvUltimaJogada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ultimaJogada"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tvJogador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/jogadaJogador" />

            <ImageView
                android:id="@+id/imgJogador"
                android:layout_width="96dp"
                android:layout_height="96dp"
                app:srcCompat="@drawable/pedra" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:gravity="center">


            <TextView
                android:id="@+id/tvPC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/jogadaPC" />

            <ImageView
                android:id="@+id/imgPC"
                android:layout_width="96dp"
                android:layout_height="96dp"
                app:srcCompat="@drawable/pedra" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resultado"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvVencedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="48dp"
        android:gravity="center"
        android:text="@string/venceu" />

</LinearLayout>
